various fixes add generic record support update javafx